--- a/PepperProject/html/style.css
+++ b/PepperProject/html/style.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+﻿@charset "UTF-8";
 
 * {
   margin: 0;
@@ -7,7 +7,8 @@
 
 body {
   font-family: 'Avenir','Helvetica Neue','Helvetica','Arial','Hiragino Sans','ヒラギノ角ゴシック',YuGothic,'Yu Gothic','メイリオ', Meiryo,'ＭＳ Ｐゴシック','MS PGothic';
-  margin: 20px auto;
+  margin: 40px;
+  margin-left: 40px;
   width: 1000px;
   font-size: 24px;
 }
